==> kevinkrieger/CAN/lpcxpresso/obd2/src/mmc.c <==
#define	_BV(bit) (1<<(bit))
#define SSP_CH	0	/* SSP channel to use (0:SSP0, 1:SSP1) */
#define	CCLK		50000000UL	/* cclk frequency [Hz] */
#define PCLK_SSP	25000000UL	/* PCLK frequency for SSP [Hz] */
#define SCLK_FAST	18000000UL	/* SCLK frequency under normal operation [Hz] */
#define	SCLK_SLOW	400000UL	/* SCLK frequency under initialization [Hz] */
#define	INS			(!(Chip_GPIO_GetPinState(LPC_GPIO, 2, 10)))// & _BV(1)))	/* Socket status (true:Inserted, false:Empty) */
#define	WP			0 /* Card write protection (true:yes, false:no) */
#define	SSPxSR		LPC_SSP0->SR
#define	SSPxCR0		LPC_SSP0->CR0
#define	SSPxCR1		LPC_SSP0->CR1
#define	SSPxCPSR	LPC_SSP0->CPSR
#define	SSPxDR		SSP1DR
#define	SSPxSR		SSP1SR
#define	SSPxCR0		SSP1CR0
#define	SSPxCR1		SSP1CR1
#define	SSPxCPSR	SSP1CPSR
#define	CS_LOW()	{FIO0CLR0 = _BV(6);}	/* Set P0.6 low */
#define	CS_HIGH()	{FIO0SET0 = _BV(6);}	/* Set P0.6 high */
#define PCSSPx		PCSSP1
#define	PCLKSSPx	PCLK_SSP1
#define PCLKDIV_SSP	PCLKDIV_1
#define PCLKDIV_SSP	2
#define PCLKDIV_SSP	PCLKDIV_4
#define PCLKDIV_SSP	PCLKDIV_8
#define FCLK_FAST() { LPC_SSP0->CPSR = (PCLK_SSP / SCLK_FAST) & ~1; }
#define FCLK_SLOW() { LPC_SSP0->CPSR = (PCLK_SSP / SCLK_SLOW) & ~1; }
#include "diskio.h"
#include "chip.h"
#define	CS_LOW()	{Chip_GPIO_SetPinState(LPC_GPIO, 0, 2, 0);}	/* Set P0.2 low */
#define	CS_HIGH()	{Chip_GPIO_SetPinState(LPC_GPIO, 0, 2, 1);}	/* Set P0.2 high */
#define CMD0	(0)			/* GO_IDLE_STATE */
#define CMD1	(1)			/* SEND_OP_COND (MMC) */

static
BYTE xchg_spi (
	BYTE dat	/* Data to send */
)
{
	LPC_SSP0->DR = dat;
	while (LPC_SSP0->SR & 0x10) ;
	return LPC_SSP0->DR;
}

static
void rcvr_spi_multi (
	BYTE *buff,		/* Pointer to data buffer */
	UINT btr		/* Number of bytes to receive (16, 64 or 512) */
)
{
	UINT n = 512;
	WORD d;


	LPC_SSP0->CR0 = 0x000F;				/* Select 16-bit mode */

	for (n = 0; n < 8; n++)			/* Push 8 frames into pipeline  */
		LPC_SSP0->DR = 0xFFFF;
	btr -= 16;
	while (btr) {					/* Receive the data block into buffer */
		while (!(LPC_SSP0->SR & _BV(2))) ;
		d = LPC_SSP0->DR;
		LPC_SSP0->DR = 0xFFFF;
		*buff++ = d >> 8;
		*buff++ = d;
		btr -= 2;
	}
	for (n = 0; n < 8; n++) {		/* Pop remaining frames from pipeline */
		while (!(LPC_SSP0->SR & _BV(2))) ;
		d = LPC_SSP0->DR;
		*buff++ = d >> 8;
		*buff++ = d;
	}

	LPC_SSP0->CR0 = 0x0007;				/* Select 8-bit mode */
}

static
void xmit_spi_multi (
	const BYTE *buff,	/* Pointer to the data */
	UINT btx			/* Number of bytes to send (512) */
)
{
	UINT n = 512;
	WORD d;


	LPC_SSP0->CR0 = 0x000F;			/* Select 16-bit mode */

	for (n = 0; n < 8; n++) {	/* Push 8 frames into pipeline  */
		d = *buff++;
		d = (d << 8) | *buff++;
		LPC_SSP0->DR = d;
	}
	btx -= 16;
	do {						/* Transmit data block */
		d = *buff++;
		d = (d << 8) | *buff++;
		while (!(LPC_SSP0->SR & _BV(2))) ;
		LPC_SSP0->DR; LPC_SSP0->DR = d;
	} while (btx -= 2);
	for (n = 0; n < 8; n++) {
		while (!(LPC_SSP0->SR & _BV(2))) ;
		LPC_SSP0->DR;
	}

	LPC_SSP0->CR0 = 0x0007;			/* Select 8-bit mode */
}

static
void power_on (void)	/* Enable SSP module and attach it to I/O pads */
{
	/* Enable AHB clock to the SSP0 domain. */
	LPC_SYSCTL->SYSAHBCLKCTRL |= (1<<11);
	LPC_SYSCTL->SSP0CLKDIV |= PCLKDIV_SSP; /*Set the prescalar to desired value (calculated above) */
	LPC_SYSCTL->PRESETCTRL |= 0x1;	/*De-assert SSP0 reset */

	LPC_SSP0->CR0 = 0x7;			/* Set mode: SPI mode 0, 8-bit */
	LPC_SSP0->CR1 = 0x2;			/* Enable SSP with Master */
#if SSP_CH == 0
	//LPC_IOCON->PIO0_2 |= 0x0;	/* Enable PIO0_2 (instead of SSEL0) */
	//LPC_IOCON->PIO0_8 |= 0x1;	/* Enable MISO0 */
	//LPC_IOCON->PIO0_9 |= 0x1;	/* Enable MOSI0 */
	//LPC_IOCON->PIO2_11 |= 0x1;	/* Enable SCK0 (USER MANUAL IS WRONG, IT SAYS TO SET THIS TO 0X2) */
	//LPC_IOCON->SCKLOC |= 0x1;	/* Select Pin 31 as SCK0 */
	//GPIOSetDir(0, 2, 1);		/* Set PIO0_2 as output */
	Chip_GPIO_SetPinDIROutput(LPC_GPIO, 0, 2);
	Chip_IOCON_PinLocSel(LPC_IOCON, IOCON_SCKLOC_PIO2_11);


#elif SSP_CH == 1
	__set_PINSEL(0, 7, 2);		/* Attach SCK1 to I/O pad */
	__set_PINSEL(0, 8, 2);		/* Attach MISO1 to I/O pad */
	__set_PINSEL(0, 9, 2);		/* Attach MOSI1 to I/O pad */
	FIO0DIR |= _BV(9)|_BV(7)|_BV(6);	/* Set SCK1, MOSI1 and CS# as output */
#endif
	CS_HIGH();					/* Set CS# high */
}

DRESULT disk_ioctl (
	BYTE drv,		/* Physical drive number (0) */
	BYTE ctrl,		/* Control command code */
	void *buff		/* Pointer to the conrtol data */
)
{
	DRESULT res;
	BYTE n, csd[16], *ptr = buff;
	WORD csize;
	DWORD *dp, st, ed;


	if (drv) return RES_PARERR;					/* Check parameter */
	if (Stat & STA_NOINIT) return RES_NOTRDY;	/* Check if drive is ready */

	res = RES_ERROR;

	switch (ctrl) {
	case CTRL_SYNC :		/* Wait for end of internal write process of the drive */
		if (select()) {
			deselect();
			res = RES_OK;
		}
		break;

	case GET_SECTOR_COUNT :	/* Get drive capacity in unit of sector (DWORD) */
		if ((send_cmd(CMD9, 0) == 0) && rcvr_datablock(csd, 16)) {
			if ((csd[0] >> 6) == 1) {	/* SDC ver 2.00 */
				csize = csd[9] + ((WORD)csd[8] << 8) + 1;
				*(DWORD*)buff = (DWORD)csize << 10;
			} else {					/* SDC ver 1.XX or MMC ver 3 */
				n = (csd[5] & 15) + ((csd[10] & 128) >> 7) + ((csd[9] & 3) << 1) + 2;
				csize = (csd[8] >> 6) + ((WORD)csd[7] << 2) + ((WORD)(csd[6] & 3) << 10) + 1;
				*(DWORD*)buff = (DWORD)csize << (n - 9);
			}
			res = RES_OK;
		}
		break;

	case GET_SECTOR_SIZE :	/* Get sector size in unit of byte (WORD) */
		*(WORD*)buff = 512;
		res = RES_OK;
		break;

	case GET_BLOCK_SIZE :	/* Get erase block size in unit of sector (DWORD) */
		if (CardType & CT_SD2) {	/* SDC ver 2.00 */
			if (send_cmd(ACMD13, 0) == 0) {	/* Read SD status */
				xchg_spi(0xFF);
				if (rcvr_datablock(csd, 16)) {				/* Read partial block */
					for (n = 64 - 16; n; n--) xchg_spi(0xFF);	/* Purge trailing data */
					*(DWORD*)buff = 16UL << (csd[10] >> 4);
					res = RES_OK;
				}
			}
		} else {					/* SDC ver 1.XX or MMC */
			if ((send_cmd(CMD9, 0) == 0) && rcvr_datablock(csd, 16)) {	/* Read CSD */
				if (CardType & CT_SD1) {	/* SDC ver 1.XX */
					*(DWORD*)buff = (((csd[10] & 63) << 1) + ((WORD)(csd[11] & 128) >> 7) + 1) << ((csd[13] >> 6) - 1);
				} else {					/* MMC */
					*(DWORD*)buff = ((WORD)((csd[10] & 124) >> 2) + 1) * (((csd[11] & 3) << 3) + ((csd[11] & 224) >> 5) + 1);
				}
				res = RES_OK;
			}
		}
		break;

	case CTRL_ERASE_SECTOR :	/* Erase a block of sectors (used when _USE_ERASE == 1) */
		if (!(CardType & CT_SDC)) break;				/* Check if the card is SDC */
		if (disk_ioctl(drv, MMC_GET_CSD, csd)) break;	/* Get CSD */
		if (!(csd[0] >> 6) && !(csd[10] & 0x40)) break;	/* Check if sector erase can be applied to the card */
		dp = buff; st = dp[0]; ed = dp[1];				/* Load sector block */
		if (!(CardType & CT_BLOCK)) {
			st *= 512; ed *= 512;
		}
		if (send_cmd(CMD32, st) == 0 && send_cmd(CMD33, ed) == 0 && send_cmd(CMD38, 0) == 0 && wait_ready(30000))	/* Erase sector block */
			res = RES_OK;	/* FatFs does not check result of this command */
		break;

	/* Following command are not used by FatFs module */

	case MMC_GET_TYPE :		/* Get MMC/SDC type (BYTE) */
		*ptr = CardType;
		res = RES_OK;
		break;

	case MMC_GET_CSD :		/* Read CSD (16 bytes) */
		if (send_cmd(CMD9, 0) == 0		/* READ_CSD */
			&& rcvr_datablock(ptr, 16))
			res = RES_OK;
		break;

	case MMC_GET_CID :		/* Read CID (16 bytes) */
		if (send_cmd(CMD10, 0) == 0		/* READ_CID */
			&& rcvr_datablock(ptr, 16))
			res = RES_OK;
		break;

	case MMC_GET_OCR :		/* Read OCR (4 bytes) */
		if (send_cmd(CMD58, 0) == 0) {	/* READ_OCR */
			for (n = 4; n; n--) *ptr++ = xchg_spi(0xFF);
			res = RES_OK;
		}
		break;

	case MMC_GET_SDSTAT :	/* Read SD status (64 bytes) */
		if (send_cmd(ACMD13, 0) == 0) {	/* SD_STATUS */
			xchg_spi(0xFF);
			if (rcvr_datablock(ptr, 64))
				res = RES_OK;
		}
		break;

	default:
		res = RES_PARERR;
	}

	deselect();

	return res;
}
